--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/geb"]
 	path = lib/geb
 	url = https://github.com/reflexer-labs/geb.git
+[submodule "lib/geb-treasury-reimbursement"]
+	path = lib/geb-treasury-reimbursement
+	url = https://github.com/reflexer-labs/geb-treasury-reimbursement.git
