--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/geb-treasury-core-param-adjuster"]
 	path = lib/geb-treasury-core-param-adjuster
 	url = https://github.com/reflexer-labs/geb-treasury-core-param-adjuster.git
+[submodule "lib/ds-test"]
+	path = lib/ds-test
+	url = https://github.com/dapphub/ds-test
