--- a/src/test/fuzz/echidna.yaml
+++ b/src/test/fuzz/echidna.yaml
@@ -9,6 +9,6 @@ testMaxGas: 12500000 # current block gas limit
 estimateGas: false
 
 # list of methods to filter
-filterFunctions: ["Fuzz.setUp()", "Fuzz.IS_TEST()", "Fuzz.failed()", "Fuzz.test_fuzz()"] # removing ds-test functions
+# filterFunctions: ["Fuzz.setUp()", "Fuzz.IS_TEST()", "Fuzz.failed()", "Fuzz.test_fuzz()"] # removing ds-test functions
 # by default, blacklist methods in filterFunctions
 filterBlacklist: true
