--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 os:
-  - linux
+- linux
 language: nix
 nix: 2.3.6
 before_install:
-  - nix-env -iA nixpkgs.cachix
-  - echo "trusted-users = root travis" | sudo tee -a /etc/nix/nix.conf && sudo pkill nix-daemon
-  - cachix use maker
-  - git clone --recursive https://github.com/dapphub/dapptools $HOME/.dapp/dapptools
-  - nix-env -f https://github.com/makerdao/makerpkgs/tarball/master -iA dappPkgsVersions.hevm-0_41_0.dapp
-  - export DAPP_TEST_GAS_LIMIT=12500000
+- nix-env -iA nixpkgs.cachix
+- echo "trusted-users = root travis" | sudo tee -a /etc/nix/nix.conf && sudo pkill nix-daemon
+- cachix use maker
+- git clone --recursive https://github.com/dapphub/dapptools $HOME/.dapp/dapptools
+- nix-env -f https://github.com/makerdao/makerpkgs/tarball/master -iA dappPkgsVersions.hevm-0_49_0.dapp
 script:
-  - dapp --use solc:0.6.7 test --fuzz-runs 1000
+- dapp --use solc:0.6.7 test
