--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,7 @@ before_install:
 - cachix use maker
 - git clone --recursive https://github.com/dapphub/dapptools $HOME/.dapp/dapptools
 - nix-env -f https://github.com/makerdao/makerpkgs/tarball/master -iA dappPkgsVersions.hevm-0_49_0.dapp
+- export DAPP_TEST_GAS_LIMIT=25000000
 script:
-- dapp --use solc:0.6.7 test --fuzz-runs 1000
+- dapp --use solc:0.6.7 test
+
